<resources>
    <string name="HOST" translatable="false">http://www.example.com</string>
    <string name="Logger">SB24SDKLOG/</string>
    <string name="app_price">1000</string>
    <string name="app_pardakht_text" formatted="false">با پرداخت مبلغ %s تومان به صورت نامحدود از مطالب این نرم افزار استفاده کنید.\nقسمتی از این مبلغ صرف ایتام خواهد شد.\nدر صورت عدم تمایل به پرداخت مبلغ ، میتوانید تمام مطالب را به صورت رایگان در سایت ما مشاهده کنید :\n\n %s</string>
    <string name="app_web_address">http://owl.sajjadyosefi.ir</string>
    <string name="pardakht">پرداخت</string>
    <string name="cancelAndExit">انصراف و خروج</string>
    <string name="internetConnectionForPaymentErrorText">برای انجام عملیات پرداخت می بایست به اینترنت متصل باشید</string>
    <string name="internetConnectionErrorTextFirstTime">در اولین اجرا باید اطلاعاتی از سرور دریافت کنیم، باید به اینترنت متصل شوید</string>
    <string name="internetConnectTryAgain">متصل شدم؛ مجدد تلاش کن</string>
    <string name="errorInInternetConnection">اتصال اینترنت شما به درستی برقرار نشده است</string>
    <string name="errorInInternetConnectionforCountinue">برای ادامه باید به اینترنت متصل شوید</string>
    <string name="phoneNumber">شماره موبایل </string>
    <string name="phoneNumber2">شماره موبایل تایید شده</string>
    <string name="Discription">توضیح (اختیاری)</string>
    <string name="peymentOkResponseMessage">پرداخت شما با موفقیت انجام شد \n کد رهپیری شما : \n %s</string>
    <string name="ErrorOnConfermPayment" formatted="false">ارتباط اینترنت شما مشکل داشت و ما متوجه پرداخت شما نشدیم، هرچه سریعتر کد پیگیری خود را برای ما sms کنید. \n شماره پشتیبانی: \n %s \n کد رهگیری: \n %s</string>
    <string name="updateAvalable">نسخه ای که شما دانلود کردید بروز نیست؛ لطفا اخرین نسخه را از طریق زیر دریافت کنید:</string>
    <string name="SupportNumber">09123678522</string>
    <string name="Model">مدل :</string>
    <string name="regNewEstekhdamTitleText">عنوان آگهی:</string>
    <string name="regNewEstekhdamTitleTextExample">اسامی برندگان قرعه کشی و...</string>
    <string name="regNewEstekhdamTitleText2">توصیف متنی</string>
    <string name="regNewEstekhdamTitleHint">توصیف متنی شامل : رنگ، نوع، مدل، تیپ، سایز، محل</string>
    <string name="state">"استان : "</string>
    <string name="PriceIn">قیمت در</string>
    <string name="HomePageTitle">لیست اصلی</string>
    <string name="ErrorOnGetPermision">خطا در دریافت مجوزهای کاربر</string>
    <string name="WeNeedYourDeviceInfo">ادامه کار به اعطای مجوز از طرف شما بستگی دارد</string>
    <string name="login">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="forgetPassword">فراموشی رمز</string>
    <string name="changePassword">تغییر رمز</string>
    <string name="account">حساب کاربری</string>
    <string name="socialNetwork">شبکه های اجتماعی</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="closeApp">بستن برنامه</string>
    <string name="loginText">از شماره موبایل خودتان برای ورود به سیستم استفاده کنید؛ ممکن است برای احراز هویت برایتان پیامک تائیدیه ارسال شود.</string>
    <string name="password">رمز عبور</string>
    <string name="REGISTER">ثبت نام</string>
    <string name="registerText">ما برای تشخیص کاربرهایمان از شماره موبایل استفاده میکنیم. جهت استفاده از اپلیکیشن می بایست شماره موبایل خودتان را وارد کنید.</string>
    <string name="rePassword">تکرار رمز عبور</string>
    <string name="registerFooterText">قبل از ثبت نام حتماً قوانین را مطالعه کنید.قوانین از طریق منوی سمت راست در دسترس است.</string>
    <string name="acceptRule">ثبت نام (قوانین را پذیرفتم)</string>
    <string name="passwordRecovery">بازیابی رمز</string>
    <string name="forgetPasswordText">رمز عبور را برایتان ایمیل خواهیم کرد ؛ درصورت عدم دسترسی به ایمیل , می توانید از موبایلتان دستور بازیابی رمز عبور بدهید.</string>
    <string name="emailAddress">آدرس ایمیل</string>
    <string name="emailAddress2">آدرس ایمیل تایید شده</string>
    <string name="mobilePasswordRecoveryHelpText">برای بازیابی رمز عبور با موبایل می بایست از طریق موبایل متن داخل کادر بالا را به شماره 1000010009 ارسال کنید.درصورتی که به هر دلیل به موبایل خود دسترسی ندارید با پشتیبانی تماس بگیرید.</string>
    <string name="mobileCaptcaText">متن ارسالی با پیامک</string>
    <string name="changePasswordText">رمز عبور جدید برایتان پیامک نیز خواهد شد</string>
    <string name="currentPassword">رمزعبور جاری</string>
    <string name="newPassword">رمز عبور جدید</string>
    <string name="reNewPassword">تکرار رمز عبور جدید</string>
    <string name="changePasswordFooterText">تغییر رمز عبور شامل کسر از اعتبار شما خواهد شد. قوانین را مطالعه کنید</string>
    <string name="someText">چیزی بنویسید</string>
    <string name="contactUsSuggestion">پیشنهاد تغییرات و ویژگی جدید</string>
    <string name="contactUs">تماس با ما؛ انتقادات، پیشنهادات، شکایات</string>
    <string name="contactUsMenu">ارتباط با ما</string>
    <string name="contactUsAppOrder">سفارش نرم افزار و اپلیکیشن</string>
    <string name="send">ارسال</string>
    <string name="radio1Text">قسمتی از بودجه ی این نرم افزار به ویژگی های درخواستی کاربر ها احتصاص دارد.اگر حس میکنید این نرم افزار چیزی کم داره؛یا جایی از برنامه نیاز به اصلاح داره از قسمت زیر پیشنهاد خودتان را ارسال کنید.</string>
    <string name="radio2Text">برای سفارش نرم افزار های اندرویدی برای سازمان یا کسب و کار خود از پنل زیر درخواست خود را اسال کنید.به سرعت با شما تماس خواهیم گرفت.</string>
    <string name="radio3Text">انتقادات و پیشنهادات و شکایاتتان از نرم افزار یا سایر کاربر ها را در قسمت زیر وارد کنید ؛ به سرعت رسیدگی خواهیم کرد و نتیجه را به اطلاع شما خواهیم رساند.</string>
    <string name="telegramChanel">کانال تلگرام</string>
    <string name="instagramPage">اینستاگرام</string>
    <string name="webSite">وبسایت</string>
    <string name="ghavanin">قوانین</string>
    <string name="instagramNotInstall">شما تلگرام را نصب نکرده اید</string>
    <string name="commingSoon">درحال آماده سازی هستیم.</string>
    <string name="telegramNotInstall">شما هنوز تلگرام را نصب نکرده اید</string>
    <string name="downloadNotifText">نسخه جدید اپلیکیشن (فشرده-zip)</string>
    <string name="startDownloadText">دانلود شروع شد.</string>
    <string name="GhablanDownloadShode">اینو قبلاً دانلود کردید</string>
    <string name="NotLoggedIn">برای دانلود تصاویر باید وارد حساب خود شوید</string>
    <string name="NotLoggedIn3">ابتدا وارد حساب کاربری خود شوید.</string>
    <string name="EDIT_PROFILE">ویرایش پروفایل</string>
    <string name="LOGOUT_SUCCSESS">با موفقیت خارج شدید</string>
    <string name="notMatchPassword">رمز های عبور وارد شده یکسان نیست</string>
    <string name="UnKnown">بدون نام</string>
    <string name="notCorrectInput">مقادیر وارد شده صحبح نمی باشد</string>
    <string name="cancel2">بیخیال</string>
    <string name="download">دریافت مستقیم</string>
    <string name="NotMobileValid">شماره موبایل معتبر نیست</string>
    <string name="VersionName">نسخه</string>
    <string name="AbouteThisVersion">درباره این ورژن</string>
    <string name="send_picture">ارسال تصویر خودرو</string>
    <string name="conferm_picture_message">تصاویر پس از تائید شدن نمایش داده می شوند، زیاد طول نمیکشه تا تائید بشن.</string>
    <string name="enter_many_tag">تگ ها :</string>
    <string name="tag_examples"> مثال : نیسان_آبی نمای_خارج رینگ چرخ</string>
    <string name="tag_role">برای جدا کردن تگ ها از فاصله استفاده کنید</string>
    <string name="gallery">گالری</string>
    <string name="camera">دوربین</string>
    <string name="visit_site">مشاهده سایت</string>
    <string name="inputType">عکس رو از کجا میخواهید؟</string>
    <string name="SelectPicture">انتخاب عکس</string>
    <string name="SelectCategory">انتخاب دسته بندی</string>
    <string name="CategoryTitle0">براساس شرکت</string>
    <string name="categoryNotSelect">لطفاً یک دسته بندی انتخاب کنید</string>
    <string name="pictureNotSelect">هنوز تصویری انتخاب نکرده اید</string>
    <string name="tagNotImported">وارد کردن حداقل 3 تگ الزامیست</string>
    <string name="fileSize4Mb">حجم فایل شما باید کمتر از 4 مگ باشد</string>
    <string name="NotLoggedIn2">برای ارسال تصویر باید وارد حساب کاربری خود شوید</string>
    <string name="CanNotSendPicture">ارسال تصویر برای شما مسدود شده است. \n لطفاً با واحد پشتیبانی تماس بگیرید. \n  \n شماره تماس : \n 09123678522</string>
    <string name="RegisterErrorOnServer">به یک مشکل برخوردیم که هیچ کسی از اون اطلاع نداره ؛ لطفاً به ما اطلاع بدید \n شماره تماس پشتیبانی: \n 09123678522</string>
    <string name="search">جستجو</string>
    <string name="CategoryTitle1">براساس الفبا نام خودرو</string>
    <string name="CategoryTitleRecent">اخیراً</string>
    <string name="no_data_available">هنوز دیتایی برای نمایش موجود نیست</string>
    <string name="radyab">ردیاب خودرو</string>
    <string name="radyabComment">با استفاده از این ماژول می توانید محل توقف یا حرکت خودروی خود را با هزینه ای بسیار ناچیز از هر نقطه از کره زمین مشاهده کنید.</string>
    <string name="firstTab">U+F03F</string>
    <string name="loginIcon">\uF02C</string>
    <string name="RegisterIon">\uE805</string>
    <string name="changePasswordIcon">\uf13e</string>
    <string name="ghavaninIcon">\uF15C</string>
    <string name="contactUsMenuIcon">\uE806</string>
    <string name="AbouteThisVersionIcon">\uF129</string>
    <string name="logoutIcon">\uF02D</string>
    <string name="closeAppIcon">\uE807</string>
    <string name="InternetIcon">\uf26b</string>
    <string name="InstagramIcon">\uf31f</string>
    <string name="TelegramIcon">\uf2c6</string>
    <string name="shareApp">ارسال اپلیکیشن</string>
    <string name="shareAppIcon">\uF1E0</string>
    <string name="ShareText"> اپلیکیشن ماشین بازها \n\n به ما بپیوندید \n  https://cafebazaar.ir/app/ir.sajjadyosefi.tubeless.tubeless/?l=fa</string>
    <string name="ShareText2">ادامه مطلب را به همراه هزاران مطالب دیگر در اپ مشاهده کنید\n\اپلیکیشن ماشین بازها \n\n به ما بپیوندید \n  https://cafebazaar.ir/app/ir.sajjadyosefi.tubeless.tubeless/?l=fa</string>
    <string name="ShareTitle">کجا میخواهید به اشتراک بگذارید؟</string>
    <string name="timeline">Timeline</string>
    <string name="News">اخبار و مقالات و اطلاعیه ها</string>
    <string name="pleaseWait">لطفاً منتظر باشید</string>
    <string name="peyda_shode">ثبت مدارک یا اشیا پیدا شده</string>
    <string name="gom_shode">ثبت مدارک یا اشیا گم شده</string>
    <string name="serghati">ثبت مدارک یا اشیا سرقتی</string>
    <string name="title">عنوان</string>
    <string name="reg">ثبت</string>
    <string name="mobile_number">شماره موبایل</string>
    <string name="back">بازگشت</string>
    <string name="text_pic">text pic</string>
    <string name="what_date">شماره تماس شما و تا چه تاریخی این درخواست معتبر است (مثال تا زمستان 99)</string>
    <string name="where_miss">مدل خودروی (شامل تیپ - مدل و کلاس و...)</string>
    <string name="text2">مشخصات شامل نام؛ مدل , کشور سازنده؛ وارد کننده ؛رنگ ؛شکل؛علامت و هرچیزی که مشخص کننده ی قطعه ی مورد نظر شماست
    </string>
    <string name="help">راهنمایی</string>
    <string name="subject">موضوع</string>
    <string name="contact_us_hint">متن</string>
    <string name="add_files">افزودن فایل</string>
    <string name="reportContent">گزارش محتوی نامناسب</string>
    <string name="reg_new_message">ارسال پیام</string>
    <string name="your_message">پیام</string>
    <string name="reg_new_yafte">ثبت مورد جدید</string>
    <string name="minimumAmount">حداقل مبلغ 1000 تومان</string>
    <string name="requestCreator">درخواست ثبت مزایده یا مناقصه</string>
    <string name="resetPass_helpText"> شما اکنون در اپلیکیشن لاگین هستید احتیاجی به رمز ندارید. اگر میخواهید رمز خود را ریست کنید از صفحه پروفایل گزینه ی (خروج از حساب کاربری) را انتخاب کنید و سپس از منوی سمت راست یا صفحه ورود ، دکمه فراموشی رمز عبور را انتخاب کنید.</string>
    <string name="resetPass_helpText2"> با ریست کردن ، رمز شما به چهار رقم آخر شماره موبایلتان تغییر خواهد کرد. پیشنهاد می گردد بعد از ورود به حساب کاربری رمز خود را تغییر دهید.</string>
</resources>