<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fb_background_color"
    android:orientation="vertical"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:fitsSystemWindows="true"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingBottom="50dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/png_contact_us" />
            <TextView
                android:id="@+id/login_title"
                android:visibility="gone"
                android:text="@string/reg_new_yafte"
                style="@style/Style_TextView_Object_Colorful" />
            <TextView
                android:text="شماره پشتیبانی 09227087288"
                style="@style/Style_TextView_Text" />
            <TextView
                android:text="نوع پیام را انتخاب کنید:"
                style="@style/Style_TextView_Text" />
            <RadioGroup
                android:visibility="visible"
                android:id="@+id/rgRadios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MyRadioButton"
                    android:text="@string/contactUsSuggestion"
                    android:checked="true" >
                    <requestFocus />
                </RadioButton>
                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contactUsAppOrder" />
                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contactUs" />
                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reportContent" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/requestCreator" />

            </RadioGroup>

            <EditText
                android:id="@+id/editTextTitle"
                style="@style/AppTheme.DayEditText"
                android:textDirection="rtl"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                android:hint="@string/subject" />
            <EditText
                android:id="@+id/editTextPhone"
                style="@style/AppTheme.DayEditText"
                android:inputType="phone"
                android:textDirection="rtl"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                android:hint="@string/phoneNumber" />
            <EditText
                android:id="@+id/editTextText"
                style="@style/AppTheme.DayEditText"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textDirection="rtl"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                android:hint="@string/contact_us_hint" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/buttonReg"
            android:text="@string/reg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
