<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fb_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        android:padding="20dp"
        android:paddingTop="130dp">
        <TextView
            android:id="@+id/login_title"
            style="@style/Style_TextView_Text"
            android:text="@string/forgetPassword" />
        <TextView
            android:id="@+id/newPassword2"
            style="@style/Style_TextView_Text"
            android:visibility="gone"
            android:text="forget_password" />

        <TextView
            style="@style/Style_TextView_Text"
            android:text="@string/help" />
        <TextView
            style="@style/Style_TextView_Text"
            android:text="@string/resetPass_helpText" />

        <TextView
            android:id="@+id/textView2"
            style="@style/Style_TextView_Text"
            android:text="@string/resetPass_helpText2" />

        <TextView
            android:id="@+id/gotoProfile"
            style="@style/AppTheme.DayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:visibility="gone"
            android:gravity="center"
            android:padding="10dp"
            android:text="برو به پروفایل کاربری" />
        </LinearLayout>
</ScrollView>

