<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fb_background_color"
    android:orientation="vertical"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbarAlwaysDrawVerticalTrack="true">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingBottom="50dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="80dp" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"  />

            </RelativeLayout>
            <TextView
                android:id="@+id/login_title"
                style="@style/Style_TextView_Text" />
            <RelativeLayout
                android:layout_gravity="right"
                android:gravity="right"
                android:layoutDirection="rtl"
                android:foregroundGravity="right"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <ir.sajjadYosefi.objectKmpautotextview.KMPAutoComplTextView
                    android:id="@+id/tvAutoCompl"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:completionThreshold="1"
                    app:completionHighlightColor="@color/colorAccent"
                    android:layout_margin="3dp"
                    android:padding="3dp"
                    app:completionTextColor="#80000000"
                    android:hint="انتخاب کنید"
                    android:background="@drawable/bg_auto"
                    app:completionIgnoreCase="true"/>

            </RelativeLayout>



            <EditText
                android:id="@+id/editTextTitle"
                style="@style/Style.EditText_direct.Tubeless"
                android:drawableLeft="@android:drawable/ic_secure"
                android:hint="@string/title" />


            <EditText
                android:id="@+id/editTextTitleStatment"
                style="@style/Style.EditText_direct.Tubeless"
                android:drawableLeft="@android:drawable/ic_secure"
                android:hint="@string/where_miss" />

            <EditText
                android:id="@+id/editTextTitlePicture"
                style="@style/Style.EditText_direct.Tubeless"
                android:drawableLeft="@android:drawable/ic_secure"
                android:visibility="gone"
                android:hint="@string/what_date" />

            <EditText
                android:id="@+id/editTextText"
                style="@style/Style.EditText_direct.Tubeless"
                android:drawableLeft="@android:drawable/ic_secure"
                android:hint="@string/text2" />

            <EditText
                android:id="@+id/editTextTextPicture"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="locale"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:background="@drawable/widget_edittext"
                android:drawableLeft="@android:drawable/ic_secure"
                android:drawablePadding="15dp"
                android:visibility="gone"
                android:hint="@string/text_pic"
                android:padding="16dp" />

            <TextView
                style="@style/Style_TextView_Text"
                android:visibility="gone"
                android:text="@string/help"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/buttonAddFiles"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/add_files"
                    android:enabled="false"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >


                <Button
                    android:id="@+id/buttonReg"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_search"
                    android:text="@string/reg"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/buttonBack"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_search"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>