<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="right"
    android:background="#fcfff8"
    android:layout_margin="10dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView1"
        style="@style/Style_TextView_Text"
        android:text="@string/updateAvalable" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCamera"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="40dp"
            android:text="@string/download"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:drawableRight="@android:drawable/stat_sys_download" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBrowse"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="40dp"
            android:text="@string/visit_site"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:drawableRight="@android:drawable/ic_menu_view"  />
    </LinearLayout>
</LinearLayout>